<androidx.constraintlayout.widget.ConstraintLayout android:background="@mipmap/movie_background"
    android:id="@+id/movie"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:clickable="true"
    app:layout_constraintStart_toStartOf="@id/left_guideline"
    app:layout_constraintTop_toBottomOf="@id/header"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="@id/image_mask"
        app:layout_constraintBottom_toBottomOf="@id/image_mask"
        android:id="@+id/film_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:src="@mipmap/movie"
        app:layout_constraintEnd_toEndOf="@id/image_mask"
        app:layout_constraintStart_toStartOf="@id/image_mask"
        tools:ignore="ContentDescription" />
    <ImageView
        android:layout_marginTop="2dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="fitXY"
        android:id="@+id/image_mask"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="248dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:src="@mipmap/mask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/avengers_end_game_title"
        app:layout_constraintTop_toBottomOf="@id/image_mask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/duration"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:gravity="center|start"
        android:textColor="#565665"
        android:text="@string/_137_min"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="SmallSp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/image_barrier"
        app:barrierDirection="bottom"
        android:orientation="horizontal"
        app:constraint_referenced_ids="image_mask,film_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/first_star"
        android:layout_marginStart="6dp"
        app:layout_constraintStart_toStartOf="@id/image_mask"
        app:layout_constraintBottom_toBottomOf="@id/image_mask"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_star_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription" />
    <ImageView
        android:id="@+id/second_star"
        app:layout_constraintStart_toEndOf="@id/first_star"
        app:layout_constraintBottom_toBottomOf="@id/first_star"
        app:layout_constraintTop_toTopOf="@id/first_star"
        android:layout_marginStart="2dp"
        android:src="@drawable/ic_star_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription" />
    <ImageView
        android:id="@+id/third_star"
        app:layout_constraintStart_toEndOf="@id/second_star"
        app:layout_constraintBottom_toBottomOf="@id/first_star"
        app:layout_constraintTop_toTopOf="@id/first_star"
        android:layout_marginStart="2dp"
        android:src="@drawable/ic_star_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription" />
    <ImageView
        android:id="@+id/fourth_star"
        app:layout_constraintStart_toEndOf="@id/third_star"
        app:layout_constraintBottom_toBottomOf="@id/first_star"
        app:layout_constraintTop_toTopOf="@id/first_star"
        android:layout_marginStart="2dp"
        android:src="@drawable/ic_star_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription" />
    <ImageView
        android:id="@+id/fifth_star"
        app:layout_constraintStart_toEndOf="@id/fourth_star"
        app:layout_constraintBottom_toBottomOf="@id/first_star"
        app:layout_constraintTop_toTopOf="@id/first_star"
        android:layout_marginStart="2dp"
        android:src="@drawable/ic_star_icon_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription" />
    <TextView
        app:layout_constraintStart_toEndOf="@id/fifth_star"
        app:layout_constraintBottom_toBottomOf="@id/first_star"
        app:layout_constraintTop_toTopOf="@id/first_star"
        android:layout_marginStart="6dp"
        android:text="@string/_125_reviews"
        android:textColor="#6D6D80"
        android:textStyle="bold"
        android:textSize="8sp"
        android:id="@+id/reviews_count"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        tools:ignore="SmallSp" />
</androidx.constraintlayout.widget.ConstraintLayout>